data/derived/fa15/progs/unify/prog3006.ml.out
Characters 310-376:
  | Thresh(a, b, c, d)  -> (eval(a, x, y) *. eval(b, x, y) *. eval(c, x, y) *. eval(d, x, y))
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float
       This is not a function; it cannot be applied.
